force-app/main/default/objects/Matching_Rule_Criteria__c/Matching_Rule_Criteria__c.object-meta.xml
<CustomObject>
    <label>Matching Rule Criteria</label>
    <nameField>
        <label>Matching Rule Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>