force-app/main/default/objects/Matching_Rule_Criteria__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>TextArea</type>
</CustomField>