force-app/main/default/objects/Matching_Rule_Criteria__c/fields/Field_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_Operator__c</fullName>
    <label>Field Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>notEqual</fullName>
            </value>
            <value>
                <fullName>lessThan</fullName>
            </value>
            <value>
                <fullName>greaterThan</fullName>
            </value>
            <value>
                <fullName>lessOrEqual</fullName>
            </value>
            <value>
                <fullName>greaterOrEqual</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>notContain</fullName>
            </value>
            <value>
                <fullName>startsWith</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
            <value>
                <fullName>within</fullName>
            </value>
            <value>
                <fullName>doesnotcontains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>