force-app/main/default/objects/Matching_Rule_Criteria__c/fields/Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule__c</fullName>
    <label>Matching Rule</label>
    <referenceTo>Matching_Rule__c</referenceTo>
    <relationshipLabel>Matching Rule Criterias</relationshipLabel>
    <relationshipName>Matching_Rule_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>